chore: unify code convention